<?xml version="1.0"?>
<package format="2">
  <name>course_agv_slam_task</name>
  <version>0.0.0</version>
  <description>The course_agv_slam package</description>

  <maintainer email="zjuyinhuan@gmail.com">zjuyh</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
